enabled file store and cottontail